@@ -7,8 +7,8 @@
 void
 data_cb (void *buffer, size_t size, gpointer user_data)
 {
-  g_printf ("Data from #%d:\n", (int) user_data);
-  g_printf ("%*s\n", size, (char *) buffer);
+//  g_printf ("Data from #%d:\n", (int) user_data);
+//  g_printf ("%*s\n", MIN (size, 60), (char *) buffer);
 }
 
 void
@@ -29,8 +29,9 @@ main (int argc, char *argv[])
     return -1;
   }
 
-  fludownloader_new_task (dl, "www.google.com", (gpointer) 1);
-  fludownloader_new_task (dl, "www.google.com", (gpointer) 2);
+  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/_index.html", (gpointer) 1);
+  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/Sintel_Trailer1.480p.DivX_Plus_HD.mkv", (gpointer) 2);
+  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/sintel_trailer-480p.mp4", (gpointer) 3);
 
   g_printf ("Press a key\n");
   getchar ();
