@@ -1,3 +1,13 @@
+2013-02-18  Xavi Artigas  <xartigas@fluendo.com>
+
+	* examples/multidl.c: (data_cb), (main):
+	* lib/fludownloader.c: (_remove_task), (_thread_function),
+	(fludownloader_destroy), (fludownloader_new_task),
+	(fludownloader_abort_task), (fludownloader_abort_all_tasks):
+	* lib/fludownloader.h:
+	  - Add abort_all_tasks method
+	  - Comments
+
 2013-02-15  Xavi Artigas  <xartigas@fluendo.com>
 
 	* examples/multidl.c: (data_cb), (done_cb), (main):
